move import from common fileto index.css file and also create index.css file add in products.css font-family

--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,1 @@
-@import url(index-header.css);
-@import url(index-pricing.css);
-@import url(index-about.css);
-@import url(products.css);
-@import url(footer.css);
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
