--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,19 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 .about__our__courses {
     background-image: url(/img/background_section_about.png);
     background-color: rgb(35, 36, 38, 0.6);
+    backdrop-filter: 1.5;
     color: rgb(225, 225, 225);
     background-attachment: fixed;
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
     position: relative;
     padding: 140px 0 140px 0;
 }
 .about__our__inner {
-    font-family: 'Bebas Neue';
+    
     padding: 0 40px 0 40px;
 }
 .little__title {
     color: rgb(199 161 122)!important;
     font-family: Satisfy;
     font-size: 28px;
+    margin: 0;
+}
+.about__title {
+    font-family: 'Bebas Neue';
+    font-size: 58px;
+    font-weight: 300;
+    margin: 0;
+}
+.about__course__time {
+    font-size: 19px;
+}
+.about__course__group {
+    padding: 25px 0 0;
 }
  /* accordion*/
 .accordion__about__item {
@@ -31,6 +50,7 @@
 .accordion__triger {
     display: block;
     font-family: 'Bebas Neue';
+    font-size: 24px;
     padding: 20px;
     
 
@@ -43,4 +63,8 @@
 }
 .accordion__item__input:checked ~ .accordion__about__content {
     display: block;
+}
+
+@media screen and (max-width: 992px;) {
+    
 }
