--- a/css/index-about.css
+++ b/css/index-about.css
@@ -34,6 +34,22 @@
 .about__course__group {
     padding: 25px 0 0;
 }
+.btn__select__course {
+    background-color: rgb(199 161 122);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding: 10px;
+    margin-top: 20px;
+    border: 2px solid rgb(199 161 122)!important;;
+}
+.btn__contact {
+    color: rgb(199 161 122);
+    text-decoration: none;
+    padding: 10px;
+    margin-top: 20px;
+    border: 2px solid rgb(199 161 122)!important;;
+
+}
  /* accordion*/
 .accordion__about__item {
     position: relative;
