--- a/css/index-about.css
+++ b/css/index-about.css
@@ -4,15 +4,19 @@
 .about__our__courses {
     background-image: url(/img/background_section_about.png);
     background-color: rgb(35, 36, 38, 0.6);
-    backdrop-filter: 1.5;
+    filter: brightness(40%);
     color: rgb(225, 225, 225);
     background-attachment: fixed;
+    display: grid;
+    grid-template-columns: 6fr 2fr 4fr;
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
     position: relative;
     padding: 140px 0 140px 0;
 }
-.about__our__inner {
+
+.about__our__inner,
+.info__about__course {
     
     padding: 0 40px 0 40px;
 }
@@ -28,11 +32,20 @@
     font-weight: 300;
     margin: 0;
 }
+.shot__line {
+    display: block;
+    border-bottom: 3px solid rgb(199 161 122);
+    width: 35px;
+}
 .about__course__time {
     font-size: 19px;
 }
 .about__course__group {
-    padding: 25px 0 0;
+    padding: 25px 0 25px 0;
+}
+.about__btn {
+   margin-top: 20px;
+   margin-bottom: 20px;
 }
 .btn__select__course {
     background-color: rgb(199 161 122);
@@ -53,7 +66,7 @@
  /* accordion*/
 .accordion__about__item {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 10px 0 10px 0;
 
 }
 .accordion__item__input {
@@ -66,14 +79,14 @@
 .accordion__triger {
     display: block;
     font-family: 'Bebas Neue';
-    font-size: 24px;
-    padding: 20px;
+    font-size: 26px;
+    padding: 14px 0 14px 0;
     
 
 }
 .accordion__about__content {
     display: none;
-    padding: 20px;
+    padding: 14px 0 14px 0;
     
 
 }
