--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import url(index-about.css);
 @import url(products.css);
 @import url(footer.css);
+@import url('index-coffe_coffee_like_a_pro.css');
