--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,4 @@
 @import url(products.css);
 @import url(footer.css);
 @import url(index-coffe_coffee_like_a_pro.css);
+@import url(index-making-team.css);
