--- a/css/index-about.css
+++ b/css/index-about.css
@@ -13,7 +13,7 @@
     padding: 0px 0 0px 0;
 }
 .dark__filter {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.8);*/
     display: grid; /* temporary*/
     grid-template-columns: 6fr 2fr 4fr;
     padding: 140px 0 140px 0;
