--- a/css/index-making-team.css
+++ b/css/index-making-team.css
@@ -1,6 +1,6 @@
 .fonts_logo_making {
     font-family: 'Satisfy', cursive;
-    color: #c9a27c;
+    color: #c7a17a;
     font-size: 24px;
 }
 .hr_making_team {
@@ -22,7 +22,6 @@
     background-attachment: fixed;
     min-height: 500px;
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
    color: #c7a17a;
