--- a/css/index.css
+++ b/css/index.css
@@ -4,5 +4,7 @@
 @import url(products.css);
 @import url(footer.css);
 @import url(index-coffe_coffee_like_a_pro.css);
-@import url(index-making-team.css);
 @import url(index-students-say.css);
+@import url(index-making.css);
+@import url(index-video.css);
+@import url(index-team.css);
