--- a/css/index-video.css
+++ b/css/index-video.css
@@ -22,3 +22,8 @@
     letter-spacing: .02em;
     
 }
+.fonts_logo_video {
+    font-family: 'Satisfy', cursive;
+    color: var(--text-color);
+    font-size: 24px;
+}
