--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,29 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+
 .about__our__courses {
     background-image: url(/img/background_section_about.png);
     background-size: 100% auto;
     background-color: rgb(35, 36, 38, 0.6);
     color: rgb(225, 225, 225);
     background-attachment: fixed;
+    background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
     position: relative;
     padding: 0px 0 0px 0;
 }
 .dark__filter {
-    background-color: rgba(0,0,0,0.8);*/
-    display: grid; /* temporary*/
-    grid-template-columns: 6fr 2fr 4fr;
+    background-color: rgba(0,0,0,0.8);
+    display: flex; /* temporary*/
     padding: 140px 0 140px 0;
 }
 
-.about__our__inner,
+.about__our__inner {
+    flex-basis: 66%;
+    padding: 0 40px 0 40px;
+    margin-left: 20px 0 0 0;
+}
 .info__about__course {
-    
-    color: rgb(225, 225, 225);
-    
+    flex-basis: 33%;    
+    color: rgb(225, 225, 225);    
     padding: 0 40px 0 40px;
     margin-left: 0 0 0 20px;
 }
@@ -31,7 +35,8 @@
     color: rgb(199 161 122)!important;
     font-family: Satisfy;
     font-size: 28px;
-    margin: 0;
+    padding: 5px 0 0;
+    
 }
 .about__title {
     font-family: 'Bebas Neue';
@@ -101,6 +106,8 @@
     display: block;
 }
 
-@media screen and (max-width: 992px;) {
+@media screen and (max-width: 992px) {
     
+.about__our__courses {
+    background-size: auto 100% ;
 }
