change section team

--- a/css/index-making.css
+++ b/css/index-making.css
@@ -1,6 +1,13 @@
+.hr_logo_making {
+    height: 3px;
+    width: 55px;
+    background-color: var(--text-color);
+}
+
 .image__making {
     width: 470px;
 }
+
 .fonts_logo_making {
     font-family: 'Satisfy', cursive;
     color: var(--text-color);
@@ -11,42 +18,46 @@
     font-size: 58px;
     color: #27292b;
     line-height: 1.1;
-    font-family: Bebas Neue,cursive;
+    font-family: Bebas Neue, cursive;
     font-weight: 400;
     letter-spacing: .02em;
 }
+
 .p_making__font {
     font-size: 19px;
     line-height: 1.5;
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     font-weight: 500;
     color: var(--color-gray);
-    
+
 }
+
 .p_making_coffee_fonts {
     font-size: 17px;
     line-height: 1.5;
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     font-weight: 400;
     color: var(--color-gray);
 }
+
 .h3_master_coffee_making {
     font-size: 34px;
     line-height: 1.2;
-    font-family: Bebas Neue,cursive;
+    font-family: Bebas Neue, cursive;
     font-weight: 400;
     letter-spacing: .02em;
     color: var(--color-gray);
-    
+
 }
+
 .btn_making_learn_more {
     font-weight: 500;
     color: #fff;
     background-color: var(--text-color);
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     text-align: center;
     background-position: 50%;
     cursor: pointer;
     padding: 18px 30px;
-    display: inline-block; 
+    display: inline-block;
 }
