--- a/css/index-about.css
+++ b/css/index-about.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
+
 .about__our__courses {
     background-image: url(/img/background_section_about.png);
     background-size: 100% auto;
@@ -32,7 +33,7 @@
     margin-left: 0 0 0 20px;
 }
 .little__title {
-    color: rgb(199 161 122)!important;
+    color: var(--text-color);
     font-family: Satisfy;
     font-size: 28px;
     padding: 5px 0 0;
@@ -46,7 +47,7 @@
 }
 .shot__line {
     display: block;
-    border-bottom: 3px solid rgb(199 161 122);
+    border-bottom: 3px solid var(--text-color);
     width: 35px;
 }
 .about__course__time {
@@ -60,19 +61,19 @@
    margin-bottom: 20px;
 }
 .btn__select__course {
-    background-color: rgb(199 161 122);
+    background-color: var(--text-color);
     color: rgb(255, 255, 255);
     text-decoration: none;
     padding: 10px;
     margin-top: 20px;
-    border: 2px solid rgb(199 161 122)!important;;
+    border: 2px solid var(--text-color);
 }
 .btn__contact {
-    color: rgb(199 161 122);
+    color: var(--text-color);;
     text-decoration: none;
     padding: 10px;
     margin-top: 20px;
-    border: 2px solid rgb(199 161 122)!important;;
+    border: 2px solid var(--text-color);
 
 }
  /* accordion*/
