Added font variables to the folder common.css

--- a/css/common.css
+++ b/css/common.css
@@ -10,4 +10,7 @@
 :root {
     --text-color: #c7a17a;
     --color-gray: #27292b;
+    --text-title: 'Bebas Neue';
+    --text-content: 'Roboto', sans-serif;
+    --text-gold: 'Satisfy';
 }
