--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&family=Space+Mono&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Satisfy&family=Space+Mono&display=swap');*/
 
 .header {
     background-color: beige;
