added text-color to common

--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,7 @@
     --text-color: #c7a17a;
     --color-gray: #27292b;
     --color-white: #fff;
+    --light-text-color: rgb(255, 255, 238);
     --text-title: 'Bebas Neue';
     --text-content: 'Roboto', sans-serif;
     --text-gold: 'Satisfy';
