--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,14 +1,16 @@
 .header {
-    margin: 0 213px 0 213px;
     padding: 30px 15px 30px 15px;
-    background-color: beige;
-    vertical-align: baseline;
+    background: url(../img/background-header.png);
+    background-size: cover;
+    opacity: 0.7;
+    height: 938px;
+    padding-left: 213px;     
+    padding-right: 213px;
 }
 
 .header__up {
     display: flex;
     justify-content: space-between;
-    
 }
 
 .header__list {
@@ -23,15 +25,51 @@
 }
 
 .header__container {
-    text-align: center;
+    display: grid;
+    justify-items: center; 
+    align-items: center;
+    padding: 270px 0 255px 0;
 }
 
 .nav__link {
     text-decoration: none;
+    color: var(--light-text-color);
+    font-family: 'roboto', sans-serif;
+}
+
+h1 {
+    color: var(--light-text-color);
+    font-family: 'Bebas neue';
+    font-size: 115px;
+    font-weight: 400;
+}
+
+.under__header {
+font-family: 'roboto',serif;
+font-size: 17px;
+color: var(--light-text-color);
+}
+
+.svg-icon {
+    fill: var(--text-color);
 }
 
 .header__list, .header__list__social {
     list-style-type: none;
+}
+
+.under__header-coffee-lab {
+    color: var(--text-color);
+    font-family: 'Satisfy';
+    font-size: 24px;
+}
+
+.under__header-hr {
+    background: var(--text-color);
+    height: 3px;
+    width: 47px;
+    border: none;
+    margin-bottom: 15px;
 }
 
 .under__header-coffee-lab {
