--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,8 @@
     --text-color: #c7a17a;
     --color-gray: #27292b;
     --color-white: #fff;
+    --background-dark: #27292b;
+    --cards-color: #2f3133;
     --light-text-color: rgb(255, 255, 238);
     --text-title: 'Bebas Neue';
     --text-content: 'Roboto', sans-serif;
