--- a/css/index-header.css
+++ b/css/index-header.css
@@ -88,8 +88,10 @@ color: var(--light-text-color);
     }
 
     .header__container {
-        justify-content: left;
-        padding: 20px;
+        justify-self: center;
+        text-align: center;
+        padding: 10px;
+        font-size: 40%;
     }
          
 }
@@ -102,8 +104,10 @@ color: var(--light-text-color);
     }
 
     .header__container {
-        justify-content: left;
-        padding: 20px;
+        justify-self: center;
+        padding: 10px;
+        text-align: center;
+        font-size: 40%;
     }
          
 }
