--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Satisfy&family=Space+Mono&display=swap');
 
