--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,16 +1,22 @@
 .header {
+    margin-top: 10px;
     padding: 30px 15px 30px 15px;
-    background: url(../img/background-header.png);
+    background-image: url(../img/background-header.png);
     background-size: cover;
-    opacity: 0.7;
+    /*background: linear-gradient(rgba(10,10,10,1.1) rgba(0,0,0,0.1) url(../img/background-header.png));*/
     height: 938px;
     padding-left: 213px;     
     padding-right: 213px;
+    opacity: 0.7;
+    
 }
 
 .header__up {
+    position: absolute;
     display: flex;
     justify-content: space-between;
+    top: 30px;
+    
 }
 
 .header__list {
